# MT5-Research-Agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: AGENT_API.md  AGENT_INTERFACE.md  AI_PROVIDERS.md  BACKGROUND_MODE.md  CLI_REFERENCE.md  DESKTOP_UI.md  EA_LAB.md  EXECUTION_MODES.md  EXPERIMENT_SCHEMA.md  GOAL_SEEKING.md  INSTALL.md  MCP_SERVER.md  MCP_SETUP.md  MT5_SETUP.md  OPTIMIZATION.md  README.md  RELEASE.md  RESEARCH_WORKFLOW.md  SAFETY.md  TASK_SCHEMA.md  TROUBLESHOOTING.md  UI_ROADMAP.md  UPDATES.md  US30_SMOKE_TEST.md
mt5_research_agent/: __main__.py  _backend_main.py  agent_intent.py  api.py  background_runner.py  batch_runner.py  cli.py  config.py  doctor.py  ea_lab.py  experiment.py  goal.py  goal_seeker.py  inputs.py  inspect.py  jobs.py  maintenance.py  mcp_server.py  mt5_diagnostics.py  mt5_process.py  optimizer.py  planner.py  providers.py  quickstart.py  report_intelligence.py  report_parser.py  reporting.py  research_workflow.py  result_store.py  run_task.py  session.py  split_validation.py  task.py  tester.py  tester_settings.py
research_requests/: ea_prompt.md  example_gold_request.md  us30_goal.md
scripts/: build_backend.ps1  install.ps1  uninstall.ps1
tests/: test_agent_intent.py  test_api.py  test_background_runner.py  test_batch_runner.py  test_config.py  (+25 more)
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs
(+41 files in other folders)
